Added css style sheet for all html files

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <h1>Pizza</h1>
     <img src="../img/pizza.jpg" alt="A delicious pizza" height=500>
-    <h2>Description</h2>
-    <p>A pizza with pepperoni topping. It is made from cheese and dough, among other ingredients. All recipes
-        taken from allrecipes.</p>
+    <div class=desc>
+        <h2>Description</h2>
+        <p>A pizza with pepperoni topping. It is made from cheese and dough, among other ingredients. All recipes
+            taken from allrecipes.</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>1/2 cup water</li>
