--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hard-Boiled Egg</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
