Replace possibly copyrighted images with free ones

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Lasagna</h1>
-    <img src="../img/lasagna.png" alt="Some delicious lasagna" width=500>
+    <img src="../img/lasagna.jpg" alt="Some delicious lasagna" width=500>
     <h3>Description</h3>
     <p>Lasagna that is easily customizable. Very tasty as well. All recipes taken from allrecipes.</p>
     <h3>Ingredients</h3>
