--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Hard-Boiled Egg</h1>
-    <img src="../img/egg.png" alt="A hard-boiled egg" width=500>
+    <img src="../img/egg.jpg" alt="A hard-boiled egg" width=500>
     <h3>Description</h3>
     <p>Eggs hard-boiled to perfection. The perfect breakfast. All recipes taken from allrecipes.</p>
     <h3>Ingredients</h3>
